# m2-rag

./: EVALUATION.md  Makefile  Pipfile  README.md  pyproject.toml
input/: judged_prompts.json
logs/: judge.jsonl
output/: judged_prompts_20251128_190249.jsonl  judged_prompts_20251215_065255.jsonl  judged_prompts_20251215_071227.jsonl  query_01.json  query_02.json  query_03.json  query_04.json  query_05.json  query_06.json  query_07.json  query_08.json  query_09.json  query_10.json  query_11.json
scripts/: run_judged_prompts.py  test_tool_calls.py
src/: logging_utils.py  main.py
src/agents/: judge_agent.py  rag_agent.py
src/cli/: query_chunk_index.py  query_index.py  query_ms_index.py  rag_query.py  search_common.py
src/db/: chunk_index.py  emb_index.py  index.py  ms_index.py  search.py
src/m2rag/ingest/: __init__.py  constants.py  doc_blocks.py  document_blocks.py  extract.py  reader.py  utils.py
src/scripts/: __init__.py  chunk_docs.py  doc_parser.py  document_parser.py  extract_docs.py  get_data.py  parsing_utils.py  reader.py  run_parser.py
src/tools/: search.py  summarize.py  wiki.py
tests/: conftest.py  test_cli_ms_index.py  test_cli_query_index.py  test_db_index.py  test_judge_agent.py  test_ms_index.py  test_parsers.py  test_rag_agent.py  test_references.py  test_tools.py
